Basic controller/service layer (accounts) and swagger integration